--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "convex": "^1.27.5",
+    "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.12",
     "inngest": "^3.44.3",
     "lucide-react": "^0.542.0",
@@ -36,6 +37,8 @@
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
