--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-hook-form": "^7.62.0",
     "react-spinners": "^0.17.0",
     "recharts": "^3.1.2",
+    "resend": "^6.1.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5"
